# hyper-ota

./: README.md
analytics/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  OTA Analytics.postman_collection.json  README.md  docker-compose.yml  example.sh  init-clickhouse.old.sql  init-clickhouse.sql  test-api.sh  test_server.sh
analytics/src/: clickhouse.rs  config.rs  error.rs  kafka.rs  main.rs  models.rs  utils.rs
analytics/src/handlers/: analytics.rs  events.rs  health.rs  mod.rs
server/: .dockerignore  .env.keycloak  .gitignore  Cargo.toml  Dockerfile  Dockerfile.keycloak-init  Project.md  README.md  diesel.toml  docker-compose.yml  keycloak.Dockerfile  nginx.conf  package-lock.json  realm-export.json  run.sh
server/cf_host/: package-lock.json  package.json  s3-server.js
server/dashboard_react/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.ts
server/dashboard_react/src/: App.tsx  index.css  types.ts
server/dashboard_react/src/api/: axios.ts
server/dashboard_react/src/components/: Analytics.tsx  Header.tsx  Home.tsx  LoadingSpinner.tsx  Login.tsx  Release.tsx  Signup.tsx  Toast.tsx
server/dashboard_react/src/services/: analyticsService.ts
server/dashboard_react/src/store/: store.ts  toastSlice.ts  userSlice.ts
server/dashboard_react/src/types/: analytics.ts
server/dashboard_react/src/utils/: errorHandler.ts  index.ts  useToast.ts
server/migrations/: add_releases_table.sql
server/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
server/migrations/2025-03-31-095842_packages_table/: up.sql
server/migrations/2025-04-22-195653_add_configs_table/: down.sql
server/migrations/2025-06-02-062039_create_workspace_name/: up.sql
server/migrations/2025-06-02-114033_replace_contents_with_important_lazy/: down.sql  up.sql
server/migrations/2025-06-02-143631_grant_db_user_permissions/: down.sql  up.sql
server/migrations/2025-06-18-210432_change_index_to_jsonb/: down.sql  up.sql
server/migrations/20250331095842_packages_table/: down.sql
server/migrations/20250422195653_add_configs_table/: up.sql
server/migrations/20250514140408_add_cleanup_outbox/: down.sql  up.sql
server/migrations/20250514140750_add_releases_table/: down.sql  up.sql
server/migrations/20250520181200_drop_organisations_table/: down.sql  up.sql
server/migrations/20250602062039_create_workspace_name/: down.sql
server/migrations/20250602143631_grant_db_user_permissions/: up.sql
server/scripts/: .env copy  .env.encrypted  .env.keycloak  backend-entrypoint.sh  clear_db.sh  encrypt_env.sh  generate_env.sh  init-superposition-org.sh  keycloak.sh
server/scripts/localstack-init/: init-aws.sh
server/src/: App.tsx  lib.rs  main.rs
server/src/dashboard/: mod.rs
server/src/middleware/: auth.rs  mod.rs
server/src/organisation/: mod.rs  transaction.rs
server/src/organisation/application/: mod.rs
server/src/organisation/user/: mod.rs  transaction.rs  utils.rs
server/src/release/: mod.rs
server/src/types/: mod.rs
server/src/user/: mod.rs
server/src/utils/: mod.rs  transaction_manager.rs  workspace.rs
server/src/utils/db/: mod.rs  models.rs  (+1 more)
server/tests/: README.md  common.rs  mocks.rs  mod.rs  organisation_tests.rs  organisation_transaction_tests.rs
(+177 files in other folders)
