[package]
name = "hyper-ota-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cac_client = { git = "https://github.com/juspay/superposition.git", tag = "cac_client-v0.16.1" }
keycloak = "26.1"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
superposition-rust-sdk = {path = "../superposition/smithy/superposition-rust-sdk" }
reqwest = { version = "^0.12.5"}
jsonwebtoken = "9.3.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3= "1.81.0"
aws-sdk-kms = "1.65.0"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.7.2"
uuid =  { version = "1.16.0", features = ["serde", "v7", "v4"]}
urlencoding = "2.1.2"
base64 = "0.22"