[package]
name = "hyper-ota-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyper_ota_server"
path = "src/lib.rs"

[[bin]]
name = "hyper-ota-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
cac_client = { git = "https://github.com/juspay/superposition.git", tag = "cac_client-v0.16.1" }
keycloak = "=26.1.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
dotenvy = "0.15"
superposition-rust-sdk = { git = "https://github.com/juspay/superposition", subdir = "clients/generated/smithy/rust"}
reqwest = { version = "^0.12.5"}
jsonwebtoken = "9.3.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3= "1.81.0"
aws-sdk-kms = "1.65.0"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.7.2"
uuid =  { version = "1.16.0", features = ["serde", "v7", "v4"]}
urlencoding = "2.1.2"
base64 = "0.22"
actix-web-thiserror = "0.2.7"
thiserror = "2.0.12"
log = "0.4.27"
chrono = "0.4.41"
tracing = "0.1.41"
diesel_migrations = "2.2"
rand = "0.8"
aws-smithy-types = "1.2.5"


[dev-dependencies]
mockall = "0.11.4"
lazy_static = "1.4.0"
actix-rt = "2.8.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
